[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Enemies/Base/Zombies.gd" type="Script" id=1]
[ext_resource path="res://Assets/PNG/Zombies/zombie_4.tres" type="Texture" id=2]
[ext_resource path="res://Scenes/Sounds/Sounds.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/PNG/Zombies/zombie_1.tres" type="Texture" id=4]
[ext_resource path="res://Assets/PNG/Zombies/zombie_0.tres" type="Texture" id=5]
[ext_resource path="res://Assets/PNG/Zombies/zombie_5.tres" type="Texture" id=6]
[ext_resource path="res://Assets/PNG/Zombies/zombie_2.tres" type="Texture" id=7]
[ext_resource path="res://Assets/PNG/Zombies/zombie_3.tres" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "action",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.7983, 17.4773 )

[sub_resource type="CircleShape2D" id=3]
radius = 300.0

[node name="Zombies" type="KinematicBody2D" groups=[
"zombies",
]]
script = ExtResource( 1 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="DeadSplat" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="PathTimer" type="Timer" parent="."]

[node name="DetectRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 3 )

[node name="Sounds" parent="." instance=ExtResource( 3 )]
sound_list = {
"death": "res://Sounds/Sfx/zombie_scream.ogg"
}
[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
